# BOLIDE

./: README.md
code/: CMakeLists.txt
code/cmake/: SetSourcesHeader.cmake
code/include/: GraphStream.h  NodeSampler.h  TriangleCounter.h  Utils.h
code/include/utils/: random.h  stop_watch.h
code/src/: NodeSampler.cpp  TriangleCounter.cpp  Utils.cpp  main.cpp
code/src/utils/: random.cpp  stop_watch.cpp
notebook/: plot_figures.ipynb
scripts/: README.md  estimate.py  run_one_pass_algo.py
utils/: datasets_map.json  target_params.json
